--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_bloc:
   flame: ^1.0.0
   tiledjsonreader: 1.0.9
   http: 0.13.4
