--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: bonfire
 description: (RPG maker) Create RPG-style or similar games more simply with Flame.
 version: 2.1.0
-homepage: https://github.com/RafaelBarbosatec/bonfire
+homepage: https://github.com/Sproute777/bonfire
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
