--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: bonfire
-description: (RPG maker) Create RPG-style or similar games more simply with Flame.
-version: 2.1.0
+description: (RPG maker) Create RPG-style or similar games more simply with Flame and Bloc.
+version: 2.1.1
 homepage: https://github.com/Sproute777/bonfire
 
 environment:
