--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: bonfire
 description: (RPG maker) Create RPG-style or similar games more simply with Flame and Bloc.
-version: 2.1.1
-homepage: https://github.com/Sproute777/bonfire
+version: 2.1.2
+# homepage: https://github.com/Sproute777/bonfire
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -16,7 +16,8 @@ dependencies:
   a_star_algorithm: 0.2.1
 
 dev_dependencies:
+  linter: ^1.18.0
+  # flutter_lints: ^1.0.4
   flutter_test:
     sdk: flutter
-
 flutter:
